# colorwheel-analysis

./: .ocamlformat  Readme.md  colorwheel.opam  colorwheel.opam.template  dune-project
docs/: dune  essay.md  essay_out.aux  essay_out.md  essay_out.tex  init.scm
lib/: dune  weights.ml
src/: dune  main.ml
